[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Other/Expolsion.gd" type="Script" id=1]
[ext_resource path="res://Assets/Boom/explosion2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Boom/explosion3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Boom/explosion1.png" type="Texture" id=4]
[ext_resource path="res://Music/8-bit-explosion1wav-14656.mp3" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 22.0

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), null ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="Expolsion" type="Node2D"]
script = ExtResource( 1 )

[node name="BlockDMG" type="Area2D" parent="."]
collision_layer = 3072
collision_mask = 264

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockDMG"]
shape = SubResource( 2 )

[node name="KillBeings" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBeings"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 10
z_as_relative = false
frames = SubResource( 4 )
frame = 3
playing = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[connection signal="area_entered" from="BlockDMG" to="." method="_on_BlockDMG_area_entered"]
[connection signal="body_entered" from="BlockDMG" to="." method="_on_BlockDMG_body_entered"]
[connection signal="body_entered" from="KillBeings" to="." method="_on_KillBeings_body_entered"]
